# SpaceSandbox

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  conroller.ron  key_mapping.ron  mytrace.json  quick.scn.ron  test_script.lua  инструкция на случай поломок.txt
.github/workflows/: rust-clippy.yml  rust-test.yml  rust.yml
assets/: all_proto.proto_list.ron
assets/furniture/: alien_one_button_console.glb  gravity_generator.glb  teleport_spot.glb
assets/ship/proto/: base_plate.prototype.ron  camera.prototype.ron  (+8 more)
assets/space_objects/: asteroid_1.prototype.ron
assets/ss13/: README.md  ss_map.txt
benches/: mesh_bench.rs
crates/bevy_transform64/: Cargo.toml
crates/space_assets/: Cargo.toml
crates/space_assets/src/: asset_holder.rs  asset_server.rs  gltf_loader.rs  handle.rs  lib.rs  mesh.rs  mipmap_generator.rs  wavefront.rs
crates/space_code_editor/: Cargo.toml
crates/space_code_editor/src/: lib.rs
crates/space_core/: Cargo.toml
crates/space_core/src/: camera.rs  lib.rs  task_server.rs
crates/space_editor/: Cargo.toml
crates/space_game/: Cargo.toml
crates/space_game/src/: api_base.rs  game.rs  gui.rs  input_system.rs  lib.rs
crates/space_game/src/plugins/: fps_counter.rs  location_update_plugin.rs  mod.rs
crates/space_macros/: Cargo.toml
crates/space_physics/: Cargo.toml
crates/space_physics/src/: lib.rs  systems.rs
crates/space_physics/src/components/: collider.rs  mod.rs  rigidbody.rs
crates/space_physics/src/debug_draw/: components.rs  mod.rs  systems.rs
crates/space_physics/src/resources/: debug_draw.rs  global_gravity.rs  mod.rs  rapier_context.rs
crates/space_physics/src/systems/: collider_systems.rs  common_systems.rs  mod.rs  rigidbody_systems.rs  write_to_bevy_systems.rs
crates/space_render/: Cargo.toml
crates/space_render/src/: hdri.rs  lib.rs
crates/space_render/src/light/: ambient_light.rs  directional_light.rs  mod.rs  point_light.rs
crates/space_render/src/pipelines/: mod.rs  point_light_plugin.rs  wgpu_dir_light.rs  wgpu_gbuffer_fill.rs  wgpu_light_fill.rs  wgpu_light_shadow.rs  wgpu_sreen_diffuse.rs  wgpu_ssao.rs  wgpu_texture_present.rs  wgpu_textures_transform.rs
crates/space_render/src/ui/: mod.rs
crates/space_shaders/: Cargo.toml
crates/space_shaders/src/: lib.rs
crates/space_voxel/: Cargo.toml
design/: Frontier Folly - альфа версия.md  Ship design.canvas  bevy editor.md  daily_tamplate.md  Диздок Frontier Folly.md  Миссия ДР.md  Мобы - альфа версия.md  пистолет.md
design/.obsidian/: app.json  community-plugins.json  daily-notes.json  workspace.json
design/daily/: 2023-07-05.md
engine/: Cargo.toml
engine/src/: camera.rs  compute.rs  gpu.rs  gui.rs  lib.rs  loop_game.rs  mesh.rs  render.rs  resource.rs  rpu.rs  wavefront.rs
ext/egui-winit-ash-integration/: Cargo.toml
original_files/: alien_one_button_generator.blend  base_block.blend  door.blend  gravity_generator.blend  metal_grid.blend  railgun_help_me.blend  wall.blend  x_ray.blend
render/: CMakeLists.txt
render/include/: render.h
render/src/: render.cpp
render/tmp_build/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  render.sln  render.vcxproj  render.vcxproj.filters
res/base_models/: base_block.blend  camera.blend  meteor_field.blend  plates_set.blend  plates_set_copy.blend  ship_example.blend  teleport_spot.blend  untitled.blend
res/bobik/: bobik.gltf
res/test_res/: test_res.json
shaders/: shader.frag  shader.vert
shaders/gbuffer_fill/: shader.frag  shader.vert
shaders/point_light/: shader.frag  shader.vert
shaders/point_light_no_shadow/: shader.frag
shaders/point_light_shadow/: shader.frag  shader.vert
shaders/screen_space/: gamma.frag  shader.vert
shaders/single_texture_draw/: shader.frag  shader.vert
shaders/wgsl/: ambient_light.wgsl  depth_calc.wgsl  dir_light.wgsl  gamma_correction.wgsl  gbuffer_fill.wgsl  light_camera_shadow.wgsl  mipmap.wgsl  point_light.wgsl  point_light_no_shadow.wgsl  present_texture.wgsl  screen_diffuse_lighting.wgsl  shader.wgsl  smooth.wgsl  ssao.wgsl
src/: buffer_safe.rs  camera.rs  compute.rs  debug_layer.rs  editor.rs  example_pipeline.rs  game.rs  game_object.rs  graphic_base.rs  grayscale_pipeline.rs  gui.rs  lib.rs  main.rs  math.rs  physics_sync.rs  render_server.rs  rpu.rs  runtime_gpu_assets.rs  single_texture_pipeline.rs  space_bundle.rs  surface_safe.rs  swapchain_safe.rs  task_server.rs  vulkan_init_utils.rs
src/asset_utils/: mod.rs
src/assets/: asset_server.rs  mod.rs  texture_server.rs  wavefront.rs
src/control/: mod.rs
src/gui/: dir_light.rs  mod.rs
src/io/: image.rs  mod.rs
src/light/: point_light.rs
src/mesh/: mod.rs  wavefront.rs
src/mission/: atom.rs  goal.rs  mod.rs  operator.rs  planning.rs  state.rs
src/network/: channel.rs  channel_protocol.rs  mod.rs  packet_socket.rs  protocol.rs
src/objects/: door.rs  gravity_generator.rs  meteor.rs  mod.rs  pilot_seat.rs  radar.rs  ship_camera.rs
src/pawn_system/: mod.rs
src/pipelines/: gbuffer_fill.rs  grayscale_pipeline.rs  mesh_light.rs  mod.rs  point_light_shadow.rs  single_texture_pipeline.rs  texture_demonstrate.rs  texture_transform_pipeline.rs  wgpu_gbuffer_fill.rs  wgpu_light_fill.rs  wgpu_light_shadow.rs  wgpu_texture_present.rs  wgpu_textures_transform.rs
src/render/: direct_light_frag.glsl  direct_light_render_impl.rs  gmesh_fragment.glsl  image_frag.glsl  image_render.rs  image_vert.glsl  mod.rs  standart_vertex.glsl
src/safe_warp/: buffer_safe.rs  command_buffer_safe.rs  framebuffer_safe.rs  instance_safe.rs  mod.rs  surface_safe.rs  swapchain_safe.rs  texture_safe.rs  texture_view.rs
src/scenes/: main_menu.rs  mod.rs  station_build_scene.rs  station_data.rs  station_plugin.rs
src/ship/: common.rs  instance_rotate.rs  mod.rs  save_load.rs
src/space_voxel/: chunked_voxel_map.rs  mod.rs  objected_mesh_generate.rs  objected_voxel_map.rs  solid_voxel_map.rs  voxel_test.rs
src/static_world/: mod.rs
src/ui/: api_info.rs  fps_counter.rs  gltf_to_load.rs  main_menu.rs  mod.rs  pipeline_editor.rs
(+82 files in other folders)
