[package]
name = "SpaceSandbox"
version = "0.1.0"
edition = "2021"
default-run = "SpaceSandbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
bevy = {version = "0.10.1", features = ["serialize"]}
bevy-inspector-egui = "*"
egui_dock = "*"
rayon = "*"
pollster = "*"
winit = "*"
ron = "*"
bevy_egui = "*"
postcard = "*"
block-mesh = "*"
bincode = "*"
base64 = "*"
snap = "*"
egui-notify = "0.6.0"
rand = "*"
laminar = "*"
bevy_prototype_debug_lines = "*"
bevy_transform64 = {path = "crates/bevy_transform64"}
space_physics = {path = "crates/space_physics"}
crossbeam = "*"
egui-gizmo = "*"
bevy_proto = "0.10"
bevy_common_assets = {version = "*", features = ["ron"]}

[workspace]
members = [
    "crates/bevy_transform64",
    "crates/space_physics",
]
resolver = "2"

[dev-dependencies]
test-case = "*"

[profile.dev]
opt-level = 2
debug = true

#[lib]
#crate-type = ["cdylib", "rlib"]