[package]
name = "SpaceSandbox"
version = "0.1.0"
edition = "2021"
default-run = "SpaceSandbox"

[dependencies]
serde = "*"
bevy = {version = "0.10.1", features = ["serialize"]}
bevy-inspector-egui = "*"
egui_dock = "*"
rayon = "*"
pollster = "*"
winit = "*"
ron = "*"
bevy_egui = "*"
postcard = "*"
block-mesh = "*"
bincode = "*"
base64 = "*"
snap = "*"
egui-notify = "0.6.0"
rand = "*"
laminar = "*"
bevy_prototype_debug_lines = "*"
bevy_transform64 = {path = "crates/bevy_transform64"}
space_physics = {path = "crates/space_physics"}
crossbeam = "*"
egui-gizmo = "*"
bevy_proto = "0.10"
bevy_common_assets = {version = "*", features = ["ron"]}
genevo = "0.7"
pathfinding = "4.3.0"
downcast-rs = "1.2.0"

[workspace]
members = [
    "crates/bevy_transform64",
    "crates/space_physics"
]
resolver = "2"

[dev-dependencies]
test-case = "*"

[profile.dev]
opt-level = 2
debug = true

#[lib]
#crate-type = ["cdylib", "rlib"]