[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
serde_json = "1.0"
wavefront_obj = "10.0.0"
winit = "0.26.0"
bytemuck =  { version = "1.7.3", features = ["derive"] }
cgmath = "0.18.0"
legion = "*"
specs = "*"