[package]
name = "space_code_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
regex = "1.6.0"

space_shaders = {path = "../space_shaders"}
space_assets = {path = "../space_assets"}


#[lib]
#crate-type = ["dylib"]