[package]
name = "space_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
wgpu = {version = "0.13", features = ["webgl"]}
legion = "0.4.0"
bytemuck = { version = "1.4.1", features = [ "derive" ] }

#[lib]
#crate-type = ["dylib"]
