[package]
name = "space_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
wgpu = {version = "0.13", features = ["webgl"]}
bytemuck = { version = "1.4.1", features = [ "derive" ] }
encase = {version = "0.3.0", features = ["nalgebra"] }
nalgebra = "0.31.1"
bevy_ecs = "0.8.1"
bevy_app = "0.8.1"

#[lib]
#crate-type = ["dylib"]
