[package]
name = "space_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
wgpu = "0.14"
bytemuck = { version = "1.4.1", features = [ "derive" ] }
encase = {version = "0.3.0", features = ["nalgebra"] }
nalgebra = {version = "0.31.1", features = ["serde-serialize"] }
bevy = "0.9.0"
ron="*"
serde = "*"

#[lib]
#crate-type = ["dylib"]
