[package]
name = "space_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
egui  = "0.19.0"
wgpu  = {version = "0.13", features = ["webgl"]}
egui_wgpu_backend = "0.19"
egui_winit_platform = "0.16"
pollster = "0.2"
legion = "0.4.0"
encase = {version = "0.3.0", features = ["nalgebra"] }
atomic_refcell = "0.1.8"
wgpu-profiler = "0.9.1"

space_core = {path = "../space_core"}
space_assets = {path = "../space_assets"}