[package]
name = "space_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
egui  = "0.19.0"
wgpu  = "0.14"
egui_wgpu_backend = "0.20"
egui_winit_platform = "0.16"
pollster = "0.2"
encase = {version = "0.3.0", features = ["nalgebra"] }
atomic_refcell = "0.1.8"
bevy = "0.9.0"
serde = "*"
nalgebra = "*"

space_core = {path = "../space_core"}
space_assets = {path = "../space_assets"}