[package]
name = "space_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11", features = ["serialize"]}
serde = "*"
rapier3d-f64 = "*"
bevy_transform64 = {path = "../bevy_transform64"}
bevy_prototype_debug_lines = {version = "*", features = ["3d"]}
bitflags = "2.3.1"