[package]
name = "space_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version = "0.13", features = ["webgl"]}
nalgebra = "0.31.1"
encase = {version = "0.3.0", features = ["nalgebra"] }
legion = "0.4.0"
downcast-rs = "1.2.0"
bytemuck = { version = "1.4.1", features = [ "derive" ] }
rand = "0.8.3"
wgpu-profiler = "0.9.1"
egui = "0.19.0"
egui_wgpu_backend = "0.19"
egui_winit_platform = "0.16"
winit      = "0.27.4"

space_assets = {path = "../space_assets"}
space_core = {path = "../space_core"}
space_shaders = {path = "../space_shaders"}
space_game = {path = "../space_game"}
#
#[lib]
#crate-type = ["dylib"]